--- a/src/views/moviesAdd.ejs
+++ b/src/views/moviesAdd.ejs
@@ -8,7 +8,8 @@
     <link rel='stylesheet' href='/css/style.css' />
 </head>
 
-<body>
+<body> 
+   
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
       </figure>
@@ -43,5 +44,7 @@
             </form>
         </article>
     </section>
+    <script src="/js/moviesAdd.js"></script>
 </body>
+
 </html>
