--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
+   
     <main class="container">
       <figure class="logoDH">
         <img src="/img/logo-DH.png" alt="Logo Digital House">
@@ -24,6 +25,7 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae reprehenderit ea asperiores, maxime quasi deserunt et distinctio praesentium ex numquam, odit molestias animi, sunt dicta consequatur. Itaque mollitia labore aliquid.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A culpa facere ipsum quia perferendis unde aliquid obcaecati qui voluptate, in est aut minima quas sunt dolores. Eligendi harum reprehenderit impedit.</p>
       </section>
-    </main>
+    </main> 
+    <script src="/js/index.js"></script>
   </body>
 </html>
